--- a/cimbar.gui/cimbar.gui.csproj
+++ b/cimbar.gui/cimbar.gui.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\cimbar.lib\cimbar.lib.csproj" />
+  </ItemGroup>
+
 </Project>
